syntax = "proto3";

option go_package = "github.com/ebpflabs/hyperion/v1alpha1/api";

package hyperion.v1alpha1.api;

import "protos/v1alpha1/base/base.proto";

import "google/protobuf/any.proto";

// HyperionAPIService is the main service and describes the entire
// gRPC API for Hyperion
service HyperionAPIService {
	// Apply RPC will take in a apply request which can result in a creation
	// of a hyperion module or updation of the module config
	rpc Apply(ApplyRequest) returns (ApplyResponse);

	// Delete RPC will take in a delete request which accepts the version, name and namespace
	// of a module and will delete the module
	rpc Delete(DeleteRequest) returns (DeleteResponse);

	// List RPC will take a list request which can EITHER specify a label based selectors
	// OR can specify core module data like name, version, namespace etc. and will list the modules
	rpc List(ListRequest) returns (stream GetResponse);

	// Get RPC will take in a get request which will return the info of the module
	// specified in the request
	rpc Get(GetRequest) returns (GetResponse);

	// WatchData RPC will will take a list request which can EITHER specify a label based selectors
	// OR can specify core module data like name, version, namespace etc. and will get data for the 
	// modules that match the filters
	rpc WatchData(WatchDataRequest) returns (stream WatchDataResponse);
}

//=================================== RPC COMPONENTS ======================================

message ApplyRequest {
	hyperion.v1alpha1.base.Module module = 1;
}
message ApplyResponse {
	string msg = 1;
}

message DeleteRequest {
	hyperion.v1alpha1.base.ModuleCore core = 1;
}
message DeleteResponse {
	string msg = 1;
}

message ListRequest {
	oneof filter {
		hyperion.v1alpha1.base.LabelSelector label = 1;
		hyperion.v1alpha1.base.ModuleCore core = 2;
	}
}

message GetRequest {
	hyperion.v1alpha1.base.ModuleCore core = 1;
}
message GetResponse {
	hyperion.v1alpha1.base.Module module = 1;
}

message WatchDataRequest {
	oneof filter {
		hyperion.v1alpha1.base.LabelSelector label = 1;
		hyperion.v1alpha1.base.ModuleCore core = 2;
	}
}
message WatchDataResponse {
	google.protobuf.Any data = 1;
}